tests/NormalTests/paczka1/small_fuzzy/74335054.err
Error in line 6: SwxDhwTIz A745 25,9
Error in line 3: 9DSOCQVake S551 0,5
